--- a/client/src/components/css/chatPage.css
+++ b/client/src/components/css/chatPage.css
@@ -8,6 +8,11 @@ https://codesandbox.io/p/sandbox/fixed-sidebar-oenio?file=%2Fsrc%2Fstyles.css%3A
         width: 90%;
         margin: 0 auto;
     }
+
+    img{
+        max-width: 80px;
+        max-height: 80px;
+    }
     
     .sidebar{
         flex: 60px 50px 0;
@@ -27,6 +32,10 @@ https://codesandbox.io/p/sandbox/fixed-sidebar-oenio?file=%2Fsrc%2Fstyles.css%3A
         flex-direction: row;
         width: 90%;
         margin: 0 auto;
+    }
+    img{
+        max-width: 120px;
+        max-height: 120px;
     }
     
     .sidebar{
