--- a/client/src/components/css/clonePage.css
+++ b/client/src/components/css/clonePage.css
@@ -1,3 +1,11 @@
-.a {
-    text-decoration: none !important;
+a {
+    color:black !important;
+}
+
+div#handlers {
+    text-align: center;
+    position:absolute;
+    align-items: center;
+    position: relative;
+    height: 80vh;
 }
